# taigi-translate-bot

./: Cargo.toml  README.md
src/: main.rs
