[package]
name = "taigi-translate-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.12.15"
scraper = "0.23.1"
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
openssl = { version = "*", features = ["vendored"] }